--- a/client/style/_animations.styl
+++ b/client/style/_animations.styl
@@ -11,5 +11,14 @@
   max-height 0
   padding 0 !important
   &.order-enter-active
-    max-height 60pxpadding 2rem 0 !important
     transform translateX(0)
+    max-height 60pxpadding
+    padding 2rem 0 !important
+
+.order-leave
+  transition all 0.5s
+  transform translateX(0)
+  &.order0leave-active
+    transform translateX(120%)
+    max-height 0
+    padding 0
