--- a/client/style/_animations.styl
+++ b/client/style/_animations.styl
@@ -22,3 +22,20 @@
     transform translateX(120%)
     max-height 0
     padding 0
+
+
+
+.count-enter
+  transition all 0.25s
+  transform translateY(100%) // start off screen
+  &.count-enter-active
+    transform translateY(0) // put it in its normal resting spot
+
+.count-leave
+  transition all 0.25s
+  position absolute
+  left 0
+  bottom 0
+  transform translateY(0) // start it where it is
+  &.count-leave-active
+    transform translateY(-100%) //
